fix #176. new social icons are not centered on firefox (#299)

--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,8 @@ footer a, footer a:visited,
    -webkit-padding-start: 0px !important;
    -webkit-margin-before: 0px !important;
    -webkit-margin-after: 0px !important;
+
+   -moz-padding-start: 0px !important;
 }
 
 .social ul li {
